appId: com.gwangy.nassspandroidsample
---
- launchApp:
    clearState: true
- assertVisible: "NapSsp Hybrid Sample"
- tapOn: "Initialize SDK"
- scrollUntilVisible:
    element:
      text: ".*INIT SUCCESS.*"
    direction: DOWN
    timeout: 15000
- scrollUntilVisible:
    element:
      text: "Load Banner.*"
    direction: UP
    timeout: 10000
- tapOn: "Load Banner.*"
- scrollUntilVisible:
    element:
      text: ".*LOADAD SUCCESS.*Accepted banner.*"
    direction: DOWN
    timeout: 15000
- scrollUntilVisible:
    element:
      text: "Clear All Ads & Releases"
    direction: DOWN
    timeout: 10000
- tapOn: "Clear All Ads & Releases"
- scrollUntilVisible:
    element:
      text: ".*CLEARADS SUCCESS.*"
    direction: DOWN
    timeout: 15000
